# tournament-dlib

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.dispatcher  DockerfileDev  DockerfileTest  README.md  blockchain_helper.py  build_logger_test_image.sh  build_tournament_blockchain_base_image.sh  build_tournament_test_image.sh  cartesi_dapp_config.yaml  config-template.yaml  dispatcher-entrypoint.sh  dispatcher_helper.py  docker-compose-dot.sh  docker-compose-template.yml  docker-compose.jinja2  docker-compose.yaml  docker_helper.py  execute_tournament_blockchain_base.sh  execute_tournament_test_container.sh  make_dispatcher_configs.sh  npm-shrinkwrap.json  package.json  requirements.txt  truffle-config.js
arbitration-dlib/contracts/: Merkle.sol
compute/: Cargo.toml
compute/src/: compute.rs  dappmock.rs  lib.rs  main.rs  match.rs  matchmanager.rs  (+5 more)
contracts/: DApp.sol  DAppMock.sol  LoggerMock.sol  MatchInstantiator.sol  MatchInterface.sol  MatchManagerInstantiator.sol  MatchManagerInterface.sol  RevealInstantiator.sol  RevealInterface.sol  RevealMock.sol  RevealMockInterface.sol  VGMock.sol
deployer/: Dockerfile
key-distributor/: Dockerfile  distribute.sh
migrations/: 2_deploy_libraries.js
setup/: Dockerfile  config-template.yaml  create-config  dispatcher-config.jq  yaml2json
test/: Dockerfile  deployedAddresses.json  proofs.json  reveal_commit_test.py
tournament/: Cargo.toml
tournament/src/: compute.rs  dappmock.rs  lib.rs  logger_service.rs  main.rs  match.rs  matchmanager.rs  mm.rs  partition.rs  reveal_commit.rs  revealmock.rs
(+5 files in other folders)
