[package]
description = "Cartesi Tournament"
homepage = "https://cartesi.io"
name = "tournament"
version = "0.1.0"
authors = ["Cartesi Team"]

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.6.0"
error = { path = "../arbitration-dlib/dispatcher/error" }
transaction = { path = "../arbitration-dlib/dispatcher/transaction" }
configuration = { path = "../arbitration-dlib/dispatcher/configuration" }
utils = { path = "../arbitration-dlib/dispatcher/utils" }
ethereum-types = "0.4"
ethabi = "6.1.0"
serde_json = "1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
state = { path = "../arbitration-dlib/dispatcher/state" }
dispatcher = { path = "../arbitration-dlib/dispatcher/dispatcher" }
compute = { path = "../arbitration-dlib/compute" }
logger_service = { path = "../logger-dlib/logger_service" }
protobuf = "2"
rust-crypto = "0.2.36"
